Fixed GetStarted btn not showing on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,9 @@
 .nav {
   background-color: inherit !important;
 }
+.getStartedMobile{
+  display: none;
+}
 
 /************* Home CSS **************/
 .homeConatainer {
@@ -143,6 +146,9 @@
 }
 
 @media screen and (max-width: 700px) {
+  .getStartedMobile{
+    display: inline;
+  }
   .imgContainer img {
     margin-top: 2rem;
     border-radius: 20px;
